HtmlUi: Remove desktop-taskbar "overflow: hidden" to fix shadow
CRU: "kann man wegnehmen, habe ich nur eingefuegt, dass die taskbar,
wenn sie zu klein wird, nicht haesslich aussieht. der fehlende schatten
ist aber wichtiger."

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/Desktop.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/Desktop.css
@@ -130,7 +130,6 @@
   top: 0px;
   right: 0px;
   height: @desktop-taskbar-height;
-  overflow: hidden;
 
   /* Has the same effect as "border-bottom: 1px solid @border-color", but is over-drawable by child */
   /* elements (such as the selected view-tab). The border would not be, because of "overflow: hidden". */
